<resources>
    <string name="app_name">Smart Gallery</string>
    <string name="albums">Albums</string>
    <string name="get_caption">Get Caption</string>
    <string name="setting">Setting</string>
    <string name="title_activity_settings">Settings</string>
    <string name="server_uri">Server URI</string>
    <string name="enter_uri">Enter server URI here</string>
    <string name="save">Save</string>
    <string name="cancel">cancel</string>
    <string name="camera_permission">CAMERA permission allows us to access CAMERA app</string>
    <string name="camera">Camera</string>
    <string name="search">Search</string>
    <string name="tags">Tags</string>
    <string name="caption">Caption</string>
    <string name="name">Name</string>
    <string name="search_results">Search Results</string>
    <string name="search_by">Search By</string>
    <string name="start_syncing_with_the_app_starts">Start Syncing with the app starts</string>
    <string name="select_albums">Select Albums</string>
    <string name="start_communication">Start Communication</string>


</resources>
