<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.SmartGallery.Activities.Setting"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/server_uri"
        android:textSize="25sp"
        android:textAlignment="center"
        />
    <EditText
        android:id="@+id/server_uri_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/search_by"
            android:textSize="25sp"
            android:onClick="chooseSearchType"
            />
        <TextView
            android:id="@+id/search_by"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="25sp"
            android:onClick="chooseSearchType"
            />



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/select_albums"
            android:textSize="25sp"
            android:onClick="chooseAlbums"
            />
        <TextView
            android:id="@+id/select_albums"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="25sp"
            android:onClick="chooseAlbums"
            />



    </LinearLayout>
    <CheckBox
        android:id="@+id/start_sync_with_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/start_syncing_with_the_app_starts"
        />


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"

        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/save_setting_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/save"/>

        <Button
            android:id="@+id/cancel_setting_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cancel"
            />
    </LinearLayout>

</LinearLayout>
